# lproj2es

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  release.sh
src/: error.rs  es.rs  locales.rs  lproj.rs  main.rs  options.rs
