[package]
name = "lproj2es"
version = "0.1.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Dump iOS localization strings into ElasticSearch"
repository = "https://github.com/kennytm/lproj2es"
readme = "README.md"
license = "MIT"

[profile.release]
panic = "abort"

[dependencies]
walkdir = "1.0"
lazy_static = "0.2"
maplit = "0.1"
rs-es = "0.9"
hyper = "0.10"
serde_json = "0.9"
structopt = "0.0"
structopt-derive = "0.0"
clap = "2.20"
error-chain = { version = "0.10", default-features = false }
plist = "0.1"
progress = "0.2"
