[package]
name = "lproj2es"
version = "0.2.1"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Dump iOS localization strings into ElasticSearch"
repository = "https://github.com/kennytm/lproj2es"
readme = "README.md"
license = "MIT"

[profile.release]
panic = "abort"

[dependencies]
walkdir = "1.0"
lazy_static = "0.2"
maplit = "0.1"
hyper = "0.10"
url = "1.4"
serde = "1.0"
serde_json = "1.0"
structopt = "0.0"
structopt-derive = "0.0"
clap = "2.20"
error-chain = { version = "0.10", default-features = false }
plist = "0.1"
iron = "0.5"
mount = "0.3"
mime = "0.2"
params = "0.6"
staticfile = "0.4"
rayon = "0.7"
pbr = "1.0"
